worked on the basic modal groundwork

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
           <ul id="js-search-results-list">
           </ul>
         </div>
+        <div id="js-render-modal-background" class="modal-background hidden">
+            <section id="js-render-modal-foreground" class="modal-foreground-container hidden">
+                <div id="js-nps-modal-park-card-container" class="nps-modal-park-card-container hidden"></div>
+                <div id="js-weather-modal-card-container" class="weather-modal-card hidden"></div>
+            </section>
+        </div>
     </main>
     <script src="scripts.js"></script>
     <script src="datastore.js"></script>
