--- a/index.html
+++ b/index.html
@@ -28,15 +28,8 @@
 
         <p id="js-error-message" class="error-message"></p>
         <div id="js-search-results" class="hidden">
-          <h2 class="title">Choose Your Park</h2>
-          <ul id="js-search-results-list">
-          </ul>
-        </div>
-        <div id="js-render-modal-background" class="modal-background hidden">
-            <section id="js-render-modal-foreground" class="modal-foreground-container hidden">
-                <div id="js-nps-modal-park-card-container" class="nps-modal-park-card-container hidden"></div>
-                <div id="js-weather-modal-card-container" class="weather-modal-card hidden"></div>
-            </section>
+          <h2 class="title">Select a Park. Start Planning.</h2>
+          <ul id="js-search-results-list"></ul>
         </div>
     </main>
     <script src="scripts.js"></script>
