worked on listeners for the more-park-info collapsible, and added somecuntionality and css rules to get basic presentation of that screen. More CSS needed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <main class="container">
         <h1 class="title">Welcome to Adventure Capital</h1>
         <h2 class="title">Search National Parks by State</h2>
-        <h2 class="title">Then Select a Park to Plan Your Trip</h2>
         <form class="form-container">
             <fieldset>
                 <label for="search-parks"><strong>Enter State Code(s)</strong></label>
@@ -28,8 +27,8 @@
 
         <p id="js-error-message" class="error-message"></p>
         <div id="js-search-results" class="hidden">
-          <h2 class="title">Select a Park. Start Planning.</h2>
-          <ul id="js-search-results-list"></ul>
+            <h2 class="title">Select a Park to Start Planning Your Trip</h2>
+            <ul id="js-search-results-list"></ul>
         </div>
     </main>
     <script src="scripts.js"></script>
